<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/addNoteHeading"
        android:layout_width="182dp"
        android:layout_height="64dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:text="@string/add_note"
        android:textColor="@color/blue"
        android:textSize="28sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/saveButton"
        android:layout_width="34dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/addNoteHeading"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="339dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="12dp"
        app:srcCompat="@drawable/done" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="360dp"
        android:layout_height="64dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="684dp"
        android:background="@drawable/border"
        android:ems="10"
        android:fontFamily="@font/poppins_semibold"
        android:inputType="text"
        android:maxLines="1"
        android:padding="12dp"
        android:text="@string/enter_the_title"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="358dp"
        android:layout_height="623dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="26dp"
        android:layout_marginBottom="42dp"
        android:background="@drawable/border"
        android:ems="10"
        android:gravity="top"
        android:inputType="text"
        android:padding="12dp"
        android:text="@string/enter_the_description"
        android:textSize="20sp" />
</RelativeLayout>




